--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
                 <i class="fas fa-landmark"></i>
                 <div class="logo-text">
                     <h1>Мэрия РПМ</h1>
-                    <p>Официальный портал Minecraft проекта</p>
+                    <p>Официальный сайт мэрии RPM</p>
                 </div>
             </div>
             <nav>
@@ -668,7 +668,7 @@
         </div>
         
         <div class="copyright">
-            <p>&copy; 2023 Мэрия РПМ в Minecraft. Все права защищены.</p>
+            <p>&copy; 2025 Мэрия РПМ в Minecraft. Все права защищены.</p>
         </div>
     </footer>
 
@@ -735,3 +735,4 @@
     </script>
 </body>
 </html>
+
