--- a/index.html
+++ b/index.html
@@ -482,8 +482,8 @@
                     </div>
                     <div class="governor-info">
                         <h3>Губернатор RPM</h3>
-                        <p>Уважаемые жители! Рад приветствовать вас на официальном сайте губернатора rpm. Наша команда работает над созданием комфортных условий для жизни, развитием экономики и улучшением инфраструктуры в нашем виртуальном мире.</p>
-                        <p>Мы открыты для диалога и готовы рассмотреть ваши предложения по развитию региона.</p>
+                        <p>Уважаемые жители! Рад приветствовать вас на официальном сайте губернатора rpm. Наша команда работает над созданием комфортных условий для жизни, развитием экономики и улучшением инфраструктуры в нашем штате.</p>
+                        <p>Мы открыты для диалога и готовы рассмотреть ваши предложения по развитию штата.</p>
                         <p>С уважением, Губернатор RPM</p>
                     </div>
                 </div>
@@ -582,11 +582,6 @@
                             </p>
                         </div>
                     </div>
-                </div>
-                
-                <div style="margin-top: 3rem; text-align: center;">
-                    <h3 style="color: var(--primary); margin-bottom: 1rem;">Не умеете пользоваться Discord?</h3>
-                    <p>Мы подготовили простое руководство для новичков. Присоединяйтесь к серверу и задавайте вопросы - мы всегда поможем!</p>
                 </div>
             </div>
         </section>
@@ -735,4 +730,5 @@
     </script>
 </body>
 </html>
+
 
